--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,27 @@
 [package]
 name = "hanzi-search"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 anyhow = "1.0.100"
-env_logger = "0.11.8"
-log = "0.4.29"
 nom = "8.0.0"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+env_logger = "0.11.8"
 structopt = "0.3.26"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies.log]
+version = "0.4.29"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+serde-wasm-bindgen = "0.6"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies.log]
+version = "0.4.29"
+features = ["max_level_off"]
